Fix spacing on homepage. Replaces #13

--- a/resources/less/forum.less
+++ b/resources/less/forum.less
@@ -139,3 +139,8 @@
         }
     }
 }
+
+.DiscussionListItem-info .item-who-read {
+    display: block;
+    margin-top: 3px; // A bit of spacing with the last reply text above
+}
